# EpistemicMemoryGraph

./: AGENTS.md  MASTER_DOC.md  README.md  environment.yml  pyproject.toml
configs/: CONFIG_INDEX.md  baselines_v0q.yaml  eval_v0q.yaml  policy_v0q.yaml
docs/: DOCS_GUIDE.md  INDEX.md
docs/handoff/: CURRENT_STATUS.md  NEXT_TASK.md  OVERVIEW_CHECKLIST.md
docs/specs/: 00_scope_and_claim.md  01_architecture_overview.md  02_data_model.md  03_policy_and_state_machine.md  04_scoring_and_trust.md  05_operational_flows.md  06_tool_boundary_and_interfaces.md  07_build_plan_and_milestones.md  08_evaluation_and_metrics.md  09_risks_non_goals_deferred.md  10_checklists_and_dod.md
docs/templates/: spec_template.md
scripts/: SCRIPTS_INDEX.md
src/: __init__.py
src/core/: __init__.py  constants.py  models.py  policy_config.py  scoring.py  state_machine.py  test_trigger.py
src/eval/: __init__.py  artifacts.py  fairness.py  schemas.py
src/store/: __init__.py  observation_store.py
src/tools/: __init__.py  schemas.py
src/workspace/: __init__.py  consolidation.py  intake.py  state.py
tests/: TEST_INDEX.md  test_core_models.py  test_eval_artifacts.py  test_eval_fairness.py  test_observation_store.py  test_policy_scoring.py  test_scaffold_imports.py  test_state_machine.py  test_test_trigger.py  test_tool_schemas.py  test_workspace_consolidation.py  test_workspace_intake.py  test_workspace_state.py
